--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -11,12 +11,7 @@
         <div class="col-lg-12">
             <h1>Hello Visitor!</h1>
             <p>
-                My name is Róbert Zöldi-Kovács. I am a Software Developer, and I have been attending to the Game Developer and Analyst course at BME.
-                I have been working on the development, and planning of several custom business support software before the course, and I am proficient in C# and Java based web developement, backed by SQL databases.
-                I am also familiar with client side JavaScript development.
-            </p>
-            <p>
-                During the course, I became failiar with many areas of game development. 
+                I'm Róbert Zöldi-Kovács, a game developer, and a software developer.
             </p>
         </div>
     </div>
