--- a/Portfolio/Views/Home/ImageCarousel.cshtml
+++ b/Portfolio/Views/Home/ImageCarousel.cshtml
@@ -9,26 +9,29 @@
     <!-- Wrapper for Slides -->
     <div class="carousel-inner">
         <div class="item active">
-            <!-- Set the first background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+            <div class="fill" style="background-image:url('@Url.Content("~/Images/soulmyst.png")'); background-position:50% 78%; background-size initial;"></div>
             <div class="carousel-caption">
-                <h2>Caption 1</h2>
+                <h2>Soulmyst</h2>
+                <p>
+                    Soulmyst is a side scrolling endless runner game, made for Ludum Dare 35.
+                </p>
             </div>
         </div>
         <div class="item">
-            <!-- Set the second background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+            <div class="fill" style="background-image:url('@Url.Content("~/Images/tapband.png")'); background-repeat:no-repeat; background-color:#111; background-size: initial;"></div>
             <div class="carousel-caption">
-                <h2>Caption 2</h2>
+                <h2>Tap Band</h2>
+                <p>
+                    Tap Band is an incremental tapping game about a time-travelling rock band, with idle elements.
+                </p>
             </div>
         </div>
-        <div class="item">
-            <!-- Set the third background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 3</h2>
-            </div>
-        </div>
+        <!--   <div class="item">
+               <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+               <div class="carousel-caption">
+                   <h2>WIP</h2>
+               </div>
+           </div>-->
     </div>
     <!-- Controls -->
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
