--- a/Portfolio/Views/Home/ImageCarousel.cshtml
+++ b/Portfolio/Views/Home/ImageCarousel.cshtml
@@ -10,12 +10,12 @@
     <div class="carousel-inner">
         <div class="item active">
             <div class="fill" style="background-image:url('@Url.Content("~/Images/soulmyst.png")'); background-position:50% 78%; background-size initial;"></div>
-            <div class="carousel-caption">
+            <a a href="@Url.Action("Soulmyst", "Projects")" class="carousel-caption">
                 <h2>Soulmyst</h2>
                 <p>
                     Soulmyst is a side scrolling endless runner game, made for Ludum Dare 35.
                 </p>
-            </div>
+            </a>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('@Url.Content("~/Images/tapband.png")'); background-repeat:no-repeat; background-color:#111; background-size: initial;"></div>
