--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 @section header{
-    @Html.Partial("ImageCarousel")
+    @*    @Html.Partial("ImageCarousel")*@
 }
 
 <!-- Page Content -->
@@ -11,7 +11,23 @@
         <div class="col-lg-12">
             <h1>Hello Visitor!</h1>
             <p>
-                I'm Róbert Zöldi-Kovács, a game developer, and a software developer.
+                My name is Róbert Zöldi-Kovács, a game designer, and a software developer.
+            </p>
+            <p>
+                I love to work on inspiring projects, with inspired people. I am familiar with full-stack development, and I have a great understanding of how systems work. This also helps me understanding how games work.
+            </p>
+            <p>
+                I always put great effort into quality, espetially when building the core of my work, because I understand how important it is to have a solid foundation during the later steps of development
+            </p>
+            <p>
+                This website's purpose is to show you my professional portfolio. I hope it will catch your interest!
+            </p>
+            <p>
+                <br />
+                Have a nice day!
+            </p>
+            <p>
+                Robert
             </p>
         </div>
     </div>
