--- a/Portfolio/Views/Projects/Soulmyst.cshtml
+++ b/Portfolio/Views/Projects/Soulmyst.cshtml
@@ -1,16 +1,19 @@
-﻿
-<div>
-    <p>
-        <img src="~/Images/soulmyst.png" style="width:20%">
+﻿<div>
+    <h2>Soulmyst</h2>
+    <p style="text-align:center">
+        <img src="~/Images/soulmyst.png" style="width:50%;">
     </p>
     <p>
         Soulmyst is an endless runner game, where the player takes control of a spirit animal, shapeshifting into different forms to pass through different obstacles.
     </p>
     <p>
+        Altough it is a side scrolling game, shapeshifting adds an extra dimension to it, bringing similar complexity as 3d runner games, where lane changing is the added dimension.
+    </p>
+    <p>
         The game was created for the Ludum Dare 35 Game Jam, wich is a 72 hours event.
     </p>
     <p>
-        The project was made with Unity engine. My main addition to the project was game logic programming, assembling the UI, configuring sprite animations, and testing if the game works properly.
+        The project was made with Unity engine. My main addition to the project was keeping the design doable, and consistent, game logic programming, assembling the UI, configuring sprite animations, and testing if the game works properly.
     </p>
     <p>
         Links:
@@ -23,6 +26,9 @@
             </li>
             <li>
                 <a href="https://github.com/ZKRobi/ghostshifter/">Source code</a>
+            </li>
+            <li>
+                Music is Ghostwave by NemesisTheory, source here: http://www.newgrounds.com/audio/listen/116479
             </li>
         </ul>
     </p>
