--- a/Portfolio/Views/About/Contact.cshtml
+++ b/Portfolio/Views/About/Contact.cshtml
@@ -5,3 +5,6 @@
     e-mail: <a href="mailto:zkovacs.robert@gmail.com" target="_top">zkovacs.robert@gmail.com</a><br />
     phone: +36 20 378 1198
 </p>
+<p>
+    CV: <a href="~/Files/Robert Zoldi-Kovacs CV.pdf">English</a>
+</p>
